--- a/src/plugins/data_views/docs/openapi/paths/s@{spaceid}@api@data_views@default.yaml
+++ b/src/plugins/data_views/docs/openapi/paths/s@{spaceid}@api@data_views@default.yaml
@@ -28,7 +28,7 @@ get:
             $ref: '../components/schemas/400_response.yaml'
 post:
   summary: Sets the default data view identifier
-  operationId: setDefaultDatailView
+  operationId: setDefaultDataView
   description: >
     This functionality is in technical preview and may be changed or removed in a future release. Elastic will work to fix any issues, but features in technical preview are not subject to the support SLA of official GA features.
   tags:
